--- a/msg_fa.po
+++ b/msg_fa.po
@@ -1,8 +1,8 @@
 msgid "welcome"
-msgstr "به ربات تلگرامی فرهنگستان ایرانشهر یزد خوش آمدید"
+msgstr "به ربات تلگرامی منابع انسانی گروه مهراز خوش آمدید"
 
 msgid "info"
-msgstr "با استفاده از این ربات می‌توانید خاطرات خود از مدرسه‌ی ایرانشهر یزد را با فرهنگستان به اشتراک بگذارید"
+msgstr "با استفاده از این ربات می‌توانید رزومه‌ی کاری خود را ارسال کنید و در مصاحبه‌ها شرکت کنید"
 
 msgid "thanks"
 msgstr "متشکریم"
@@ -11,7 +11,7 @@ msgid "ready_to_receive"
 msgstr "پیام‌ها و خاطرات خود را همینجا برای ربات ارسال کنید تا به طور مستقیم به دست فرهنگستان برسد"
 
 msgid "sent_successfully"
-msgstr "خاطره‌ی شما با موفقیت به فرهنگستان ارسال شد"
+msgstr "پیام شما با موفقیت به تیم منابع انسانی مهراز ارسال شد"
 
 msgid ""
 msgstr ""
